All database interaction done :')

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19,9 +19,11 @@
   height: -moz-fit-content;
   height: fit-content;
   border-radius: 50px;
+  border: none;
   margin: 10px;
   padding: 8px 20px 8px 20px;
   background-size: 200% auto;
+  background-color: transparent;
   box-shadow: 0 0.6px 1.1px rgba(0, 0, 0, 0.075), 0 5px 9px rgba(0, 0, 0, 0.15);
   cursor: pointer;
   font-size: 0.9rem;
@@ -55,6 +57,10 @@
   color: #b4b4b4;
 }
 
+.input:focus-visible {
+  outline: none;
+}
+
 .input-dropdown {
   cursor: pointer;
   display: grid;
@@ -76,7 +82,7 @@
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
   z-index: 10;
-  overflow: hidden;
+  overflow-y: scroll;
   transition: 0.2s ease-out;
   display: grid;
   align-items: center;
@@ -111,10 +117,20 @@
   background-image: linear-gradient(43deg, #5d7589 0%, #f9a826 65%, #5d7589 100%);
 }
 
-.btn-login {
+.btn-login,
+.btn-logout {
   box-shadow: 0 0 0 1.5px #5d7589;
   color: #5d7589;
   font-weight: 700;
+}
+
+.border-red {
+  border: 1px solid red;
+}
+
+.text-alert {
+  color: red;
+  font-size: 0.8rem;
 }
 
 .sm-icon,
@@ -243,7 +259,7 @@ nav .icon-menu .line {
 
   nav .nav-links {
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: repeat(auto-fill, 1fr);
     justify-items: center;
     touch-action: none;
     background-color: rgba(0, 0, 0, 0.534);
@@ -263,13 +279,15 @@ nav .icon-menu .line {
     margin: 0;
   }
 
-  nav .nav-links .btn-login {
+  nav .nav-links .btn-login,
+  nav .nav-links .btn-logout {
     box-shadow: 0 0 0 1.5px white;
     color: white;
     font-weight: 100;
   }
 
-  nav .nav-links .btn-login .icon-person {
+  nav .nav-links .btn-login .icon-person,
+  nav .nav-links .btn-logout .icon-person {
     background-image: url('data:image/svg+xml;utf8,<svg width="54px" height="54px" viewBox="0 0 54 54" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path fill="white" stroke="transparent" stroke-width="0" style="" d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/></svg>');
   }
 
@@ -320,13 +338,13 @@ nav .icon-menu .line {
   width: 100%;
 }
 
-.container-sign .sign-block-1 form #input-email {
+.container-sign .sign-block-1 form #email {
   margin-top: 30px;
   height: 35px;
   width: 85%;
 }
 
-.container-sign .sign-block-1 form #input-password {
+.container-sign .sign-block-1 form #password {
   margin-top: 20px;
   height: 35px;
   width: 85%;
@@ -476,17 +494,18 @@ nav .icon-menu .line {
   width: 100%;
 }
 
-.container-signup .sign-block-2 form #input-username {
-  margin-top: 70px;
-  height: 40px;
-  width: 100%;
-}
-
-.container-signup .sign-block-2 form #input-email,
-.container-signup .sign-block-2 form #input-password {
+.container-signup .sign-block-2 form #username {
   margin-top: 20px;
   height: 40px;
-  width: 100%;
+  width: 240px;
+}
+
+.container-signup .sign-block-2 form #email,
+.container-signup .sign-block-2 form #password,
+.container-signup .sign-block-2 form #password_confirmation {
+  margin-top: 20px;
+  height: 40px;
+  width: 240px;
 }
 
 .container-signup .sign-block-2 form a {
@@ -497,7 +516,7 @@ nav .icon-menu .line {
 
 .container-signup .sign-block-2 form .btn-form-signup {
   background-color: #f9a826;
-  margin-top: 40px;
+  margin-top: 20px;
   box-shadow: 0 0px 0.9px rgba(0, 0, 0, 0.13), 0 0px 7px rgba(0, 0, 0, 0.26);
   border: none;
   color: white;
@@ -616,8 +635,17 @@ footer div:last-child {
   }
 }
 
+*:focus {
+  outline: none;
+}
+
+*:focus-visible {
+  outline: 3px solid #f9a826;
+}
+
 .grid-default,
 .container-modal .modal-body .modal-content .container-btn,
+.container-modal .modal-body .modal-content form .container-container .container-input .validation,
 .container-modal .modal-body .modal-content form .container-container,
 .container-modal .modal-body .modal-content .container-steps .circle-1,
 .container-modal .modal-body .modal-content .container-steps .circle-2,
@@ -650,7 +678,9 @@ a {
 #nationality-toggle,
 #gender-toggle,
 #DB-month-toggle,
-#PI-month-toggle {
+#PI-month-toggle,
+#expmonth-toggle,
+#expyear-toggle {
   position: absolute;
   visibility: hidden;
 }
@@ -825,10 +855,32 @@ body {
   row-gap: 20px;
 }
 
+@media only screen and (max-width: 768px) {
+  .container-modal .modal-body .modal-content form .container-container {
+    grid-template-columns: 1fr;
+  }
+}
+
 .container-modal .modal-body .modal-content form .container-container .container-input {
   display: grid;
   row-gap: 20px;
   width: 75%;
+}
+
+.container-modal .modal-body .modal-content form .container-container .container-input .validation {
+  width: 100%;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.container-modal .modal-body .modal-content form .container-container .container-input .validation div {
+  text-align: center;
+}
+
+.container-modal .modal-body .modal-content form .container-container .container-input .btn-book-now {
+  border: none;
+  background-color: #f9a826;
+  color: white;
+  font-size: 1.5rem;
 }
 
 .container-modal .modal-body .modal-content form .container-container .container-input label {
@@ -869,6 +921,16 @@ body {
   width: 80%;
 }
 
+.container-modal .modal-body .modal-content form .container-container .container-input .card-info {
+  grid-template-columns: 50% 50%;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+}
+
+.container-modal .modal-body .modal-content form .container-container .container-input .card-info .input {
+  width: 85%;
+}
+
 .container-modal .modal-body .modal-content form .container-container .container-input .container-date-DB,
 .container-modal .modal-body .modal-content form .container-container .container-input .container-date-PI {
   display: grid;
@@ -906,6 +968,33 @@ body {
   border-bottom-left-radius: 0px;
 }
 
+.container-modal .modal-body .modal-content form .container-container .cards {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.container-modal .modal-body .modal-content form .container-container .cards a {
+  cursor: pointer;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.container-modal .modal-body .modal-content form .container-container .cards a:focus-visible ~ img {
+  outline: 2px solid #f9a826;
+  height: 100px;
+}
+
+.container-modal .modal-body .modal-content form .container-container .cards a img {
+  height: 55px;
+  border-radius: 10px;
+  box-shadow: 0 0px 14px rgba(0, 0, 0, 0.2);
+}
+
 .container-modal .modal-body .modal-content form .container-container:first-child .container-input {
   grid-column: span 2;
 }
@@ -927,18 +1016,38 @@ body {
 #nationality-toggle:checked ~ label[for=gender-toggle] .dropdown,
 #nationality-toggle:checked ~ label[for=DB-month-toggle] .dropdown,
 #nationality-toggle:checked ~ label[for=PI-month-toggle] .dropdown,
+#nationality-toggle:checked ~ label[for=expmonth-toggle] .dropdown,
+#nationality-toggle:checked ~ label[for=expyear-toggle] .dropdown,
 #gender-toggle:checked ~ label[for=nationality-toggle] .dropdown,
 #gender-toggle:checked ~ label[for=gender-toggle] .dropdown,
 #gender-toggle:checked ~ label[for=DB-month-toggle] .dropdown,
 #gender-toggle:checked ~ label[for=PI-month-toggle] .dropdown,
+#gender-toggle:checked ~ label[for=expmonth-toggle] .dropdown,
+#gender-toggle:checked ~ label[for=expyear-toggle] .dropdown,
 #DB-month-toggle:checked ~ label[for=nationality-toggle] .dropdown,
 #DB-month-toggle:checked ~ label[for=gender-toggle] .dropdown,
 #DB-month-toggle:checked ~ label[for=DB-month-toggle] .dropdown,
 #DB-month-toggle:checked ~ label[for=PI-month-toggle] .dropdown,
+#DB-month-toggle:checked ~ label[for=expmonth-toggle] .dropdown,
+#DB-month-toggle:checked ~ label[for=expyear-toggle] .dropdown,
 #PI-month-toggle:checked ~ label[for=nationality-toggle] .dropdown,
 #PI-month-toggle:checked ~ label[for=gender-toggle] .dropdown,
 #PI-month-toggle:checked ~ label[for=DB-month-toggle] .dropdown,
-#PI-month-toggle:checked ~ label[for=PI-month-toggle] .dropdown {
+#PI-month-toggle:checked ~ label[for=PI-month-toggle] .dropdown,
+#PI-month-toggle:checked ~ label[for=expmonth-toggle] .dropdown,
+#PI-month-toggle:checked ~ label[for=expyear-toggle] .dropdown,
+#expmonth-toggle:checked ~ label[for=nationality-toggle] .dropdown,
+#expmonth-toggle:checked ~ label[for=gender-toggle] .dropdown,
+#expmonth-toggle:checked ~ label[for=DB-month-toggle] .dropdown,
+#expmonth-toggle:checked ~ label[for=PI-month-toggle] .dropdown,
+#expmonth-toggle:checked ~ label[for=expmonth-toggle] .dropdown,
+#expmonth-toggle:checked ~ label[for=expyear-toggle] .dropdown,
+#expyear-toggle:checked ~ label[for=nationality-toggle] .dropdown,
+#expyear-toggle:checked ~ label[for=gender-toggle] .dropdown,
+#expyear-toggle:checked ~ label[for=DB-month-toggle] .dropdown,
+#expyear-toggle:checked ~ label[for=PI-month-toggle] .dropdown,
+#expyear-toggle:checked ~ label[for=expmonth-toggle] .dropdown,
+#expyear-toggle:checked ~ label[for=expyear-toggle] .dropdown {
   height: 70px;
   padding-top: 10px;
   padding-bottom: 15px;
@@ -951,14 +1060,20 @@ body {
 #DB-month-toggle:checked ~ label[for=DB-month-toggle] .dropdown,
 #DB-month-toggle:checked ~ label[for=PI-month-toggle] .dropdown,
 #PI-month-toggle:checked ~ label[for=DB-month-toggle] .dropdown,
-#PI-month-toggle:checked ~ label[for=PI-month-toggle] .dropdown {
+#PI-month-toggle:checked ~ label[for=PI-month-toggle] .dropdown,
+#expmonth-toggle:checked ~ label[for=DB-month-toggle] .dropdown,
+#expmonth-toggle:checked ~ label[for=PI-month-toggle] .dropdown,
+#expyear-toggle:checked ~ label[for=DB-month-toggle] .dropdown,
+#expyear-toggle:checked ~ label[for=PI-month-toggle] .dropdown {
   height: 100px;
 }
 
 label[for=nationality-toggle],
 label[for=gender-toggle],
 label[for=DB-month-toggle],
-label[for=PI-month-toggle] {
+label[for=PI-month-toggle],
+label[for=expmonth-toggle],
+label[for=expyear-toggle] {
   position: relative;
   display: grid;
   right: 8px;
@@ -980,5 +1095,10 @@ label[for=PI-month-toggle] {
 label[for=DB-month-toggle] .dropdown,
 label[for=PI-month-toggle] .dropdown {
   width: 123.1%;
+}
+
+label[for=expmonth-toggle] .dropdown,
+label[for=expyear-toggle] .dropdown {
+  width: 107.7%;
 }
 
