--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -14,6 +14,14 @@ $desktop: 1200px;
 @import "layout/auth";
 @import "layout/footer";
 
+*:focus {
+    outline: none;
+}
+
+*:focus-visible {
+    outline: 3px solid $primary;
+}
+
 .grid-default {
     display: grid;
     justify-items: center;
@@ -29,7 +37,9 @@ a {
 #nationality-toggle,
 #gender-toggle,
 #DB-month-toggle,
-#PI-month-toggle {
+#PI-month-toggle,
+#expmonth-toggle,
+#expyear-toggle {
     position: absolute;
     visibility: hidden;
 }
@@ -221,10 +231,31 @@ body {
                     align-items: center;
                     row-gap: 20px;
 
+                    @media only screen and (max-width: $mobile) {
+                        grid-template-columns: 1fr;
+                    }
+
                     .container-input {
                         display: grid;
                         row-gap: 20px;
                         width: 75%;
+
+                        .validation {
+                            width: 100%;
+                            @extend .grid-default;
+                            grid-template-columns: 1fr 1fr 1fr;
+
+                            div {
+                                text-align: center;
+                            }
+                        }
+
+                        .btn-book-now {
+                            border: none;
+                            background-color: $primary;
+                            color: white;
+                            font-size: 1.5rem;
+                        }
 
                         label {
                             margin-left: 4%;
@@ -256,6 +287,15 @@ body {
                             }
                         }
 
+                        .card-info {
+                            grid-template-columns: 50% 50%;
+                            column-gap: 10px;
+
+                            .input {
+                                width: 85%;
+                            }
+                        }
+
                         .container-date-DB,
                         .container-date-PI {
                             display: grid;
@@ -282,6 +322,28 @@ body {
                             .input-year-PI {
                                 border-top-left-radius: 0px;
                                 border-bottom-left-radius: 0px;
+                            }
+                        }
+                    }
+
+                    .cards {
+                        width: fit-content;
+
+                        a {
+                            cursor: pointer;
+                            width: fit-content;
+                            height: fit-content;
+
+                            &:focus-visible {
+                                ~ img {
+                                    outline: 2px solid $primary;
+                                    height: 100px;
+                                }
+                            }
+                            img {
+                                height: 55px;
+                                border-radius: 10px;
+                                box-shadow: 0 0px 14px rgba(0, 0, 0, 0.2);
                             }
                         }
                     }
@@ -315,11 +377,15 @@ body {
 #nationality-toggle:checked,
 #gender-toggle:checked,
 #DB-month-toggle:checked,
-#PI-month-toggle:checked {
+#PI-month-toggle:checked,
+#expmonth-toggle:checked,
+#expyear-toggle:checked {
     ~ label[for="nationality-toggle"],
     ~ label[for="gender-toggle"],
     ~ label[for="DB-month-toggle"],
-    ~ label[for="PI-month-toggle"] {
+    ~ label[for="PI-month-toggle"],
+    ~ label[for="expmonth-toggle"],
+    ~ label[for="expyear-toggle"] {
         .dropdown {
             height: 70px;
             padding-top: 10px;
@@ -338,7 +404,9 @@ body {
 label[for="nationality-toggle"],
 label[for="gender-toggle"],
 label[for="DB-month-toggle"],
-label[for="PI-month-toggle"] {
+label[for="PI-month-toggle"],
+label[for="expmonth-toggle"],
+label[for="expyear-toggle"] {
     position: relative;
     display: grid;
     right: 8px;
@@ -358,5 +426,12 @@ label[for="PI-month-toggle"] {
 
     .dropdown {
         width: 123.1%;
+    }
+}
+
+label[for="expmonth-toggle"],
+label[for="expyear-toggle"] {
+    .dropdown {
+        width: 107.7%;
     }
 }
