--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -3,8 +3,14 @@ $secondary: #5d7589;
 $light: white;
 $dark: black;
 $disabled: rgb(199, 199, 199);
-$mobile: 768px;
+$mobile-wide: 768px;
+$mobile: 559px;
 $desktop: 1200px;
+
+.grid-default {
+    display: grid;
+    justify-items: center;
+}
 
 //@import "base/reset";
 @import "components/buttons";
@@ -12,6 +18,9 @@ $desktop: 1200px;
 @import "components/icons";
 @import "components/navigation";
 @import "layout/auth";
+@import "components/modals";
+@import "layout/store";
+@import "layout/profile";
 @import "layout/footer";
 
 *:focus {
@@ -22,26 +31,10 @@ $desktop: 1200px;
     outline: 3px solid $primary;
 }
 
-.grid-default {
-    display: grid;
-    justify-items: center;
-}
-
 a {
     list-style-type: none;
     color: $dark;
     text-decoration: none;
-}
-
-#nav-toggle,
-#nationality-toggle,
-#gender-toggle,
-#DB-month-toggle,
-#PI-month-toggle,
-#expmonth-toggle,
-#expyear-toggle {
-    position: absolute;
-    visibility: hidden;
 }
 
 .circle-change {
@@ -66,80 +59,6 @@ body {
     @extend .grid-default;
 }
 
-.container-store {
-    width: 75%;
-    height: 500px;
-    margin-top: 14%;
-
-    @extend .grid-default;
-    grid-template-rows: repeat(auto-fill, 1fr);
-    gap: 10px;
-
-    .store-search {
-        width: 40%;
-        height: 50px;
-        padding: 0 30px 0 30px;
-        background-color: white;
-        box-shadow: 0 0px 2.8px rgba(0, 0, 0, 0.11),
-            0 0px 22px rgba(0, 0, 0, 0.22);
-        border-radius: 40px;
-
-        display: grid;
-        align-items: center;
-        gap: 0;
-        grid-template-columns: 50px 1fr;
-
-        input {
-            border-top-right-radius: 40px;
-            border-bottom-right-radius: 40px;
-            border: none;
-            outline: none;
-        }
-    }
-
-    .container-store-item {
-        width: 100%;
-        height: 100%;
-        background-color: white;
-        box-shadow: 0 0px 2.8px rgba(0, 0, 0, 0.11),
-            0 0px 22px rgba(0, 0, 0, 0.22);
-        border-radius: 40px;
-        grid-template-columns: 1fr 0.3fr;
-
-        @extend .grid-default;
-        align-items: center;
-
-        .store-item-column {
-            width: 100%;
-            @extend .grid-default;
-            align-items: center;
-            grid-template-columns: 0.5fr 0.1fr 0.5fr 0.5fr;
-
-            img {
-                width: 100px;
-                height: 20px;
-            }
-
-            div {
-                text-align: center;
-            }
-        }
-
-        .store-item-book {
-            width: 100%;
-            height: 100%;
-            border-left: 1px dashed $disabled;
-            @extend .grid-default;
-            align-items: center;
-            .btn-book {
-                color: white;
-                background-color: $secondary;
-                border: none;
-            }
-        }
-    }
-}
-
 .container-bg {
     z-index: 2;
     position: fixed;
@@ -147,291 +66,4 @@ body {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.534);
     display: none;
-}
-
-.container-modal {
-    z-index: 2;
-    position: fixed;
-    width: 100%;
-
-    overflow-y: visible;
-
-    display: none;
-    justify-items: center;
-
-    .modal-body {
-        width: 55%;
-        background-color: white;
-        border-radius: 30px;
-
-        @extend .grid-default;
-        grid-template-rows: 0.09fr 1fr;
-
-        .modal-header {
-            width: 100%;
-            padding-top: 20px;
-
-            display: grid;
-            justify-items: end;
-
-            .icon-exit {
-                margin-right: 7%;
-            }
-        }
-
-        .modal-content {
-            width: 100%;
-            overflow-x: hidden;
-            @extend .grid-default;
-            grid-template-rows: 0.1fr 1fr;
-
-            .container-steps {
-                @extend .grid-default;
-                align-items: center;
-                grid-template-columns: 0.5fr 25px 0.5fr 25px 0.5fr;
-
-                .circle-1,
-                .circle-2,
-                .circle-3 {
-                    width: 30px;
-                    height: 30px;
-                    border-radius: 50%;
-                    background-color: $secondary;
-                    color: white;
-                    font-weight: 700;
-                    z-index: 1;
-
-                    @extend .grid-default;
-                    align-items: center;
-                }
-
-                .circle-divider {
-                    width: 30px;
-                    border: 1px dashed rgb(189, 189, 189);
-                }
-            }
-
-            form {
-                width: 300%;
-                padding: 20px 0px 20px 0px;
-
-                display: grid;
-                justify-items: center;
-                //grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-                grid-template-columns: 1fr 1fr 1fr;
-                row-gap: 5px;
-
-                .container-container {
-                    width: 100%;
-                    position: relative;
-                    left: 100%;
-
-                    @extend .grid-default;
-                    grid-template-columns: 1fr 1fr;
-                    align-items: center;
-                    row-gap: 20px;
-
-                    @media only screen and (max-width: $mobile) {
-                        grid-template-columns: 1fr;
-                    }
-
-                    .container-input {
-                        display: grid;
-                        row-gap: 20px;
-                        width: 75%;
-
-                        .validation {
-                            width: 100%;
-                            @extend .grid-default;
-                            grid-template-columns: 1fr 1fr 1fr;
-
-                            div {
-                                text-align: center;
-                            }
-                        }
-
-                        .btn-book-now {
-                            border: none;
-                            background-color: $primary;
-                            color: white;
-                            font-size: 1.5rem;
-                        }
-
-                        label {
-                            margin-left: 4%;
-                            font-size: 0.8rem;
-                            justify-self: start;
-                        }
-
-                        .input {
-                            margin-top: 10px;
-                            width: 89.5%;
-                            height: 30px;
-
-                            &::placeholder {
-                                color: $disabled;
-                            }
-                        }
-
-                        .input-2 {
-                            width: 95.1%;
-                            display: grid;
-                            grid-template-columns: 70% 30%;
-
-                            .label-dropdown {
-                                margin-left: 5.5%;
-                            }
-
-                            .input {
-                                width: 80%;
-                            }
-                        }
-
-                        .card-info {
-                            grid-template-columns: 50% 50%;
-                            column-gap: 10px;
-
-                            .input {
-                                width: 85%;
-                            }
-                        }
-
-                        .container-date-DB,
-                        .container-date-PI {
-                            display: grid;
-                            grid-template-columns: 0.19fr 0.5fr 0.21fr;
-                            width: 100%;
-                            align-items: center;
-                            column-gap: 20px;
-
-                            .input-day-DB,
-                            .input-day-PI {
-                                border-top-right-radius: 0px;
-                                border-bottom-right-radius: 0px;
-                            }
-
-                            .input-month-DB,
-                            .input-month-PI {
-                                border-radius: 0px;
-                                clip-path: inset(-5px 0 -5px 0);
-                                width: 100%;
-                                height: 32px;
-                            }
-
-                            .input-year-DB,
-                            .input-year-PI {
-                                border-top-left-radius: 0px;
-                                border-bottom-left-radius: 0px;
-                            }
-                        }
-                    }
-
-                    .cards {
-                        width: fit-content;
-
-                        a {
-                            cursor: pointer;
-                            width: fit-content;
-                            height: fit-content;
-
-                            &:focus-visible {
-                                ~ img {
-                                    outline: 2px solid $primary;
-                                    height: 100px;
-                                }
-                            }
-                            img {
-                                height: 55px;
-                                border-radius: 10px;
-                                box-shadow: 0 0px 14px rgba(0, 0, 0, 0.2);
-                            }
-                        }
-                    }
-                }
-
-                .container-container:first-child {
-                    .container-input {
-                        grid-column: span 2;
-                    }
-                }
-            }
-
-            .container-btn {
-                width: 100%;
-
-                @extend .grid-default;
-                grid-template-columns: 1fr 1fr;
-                justify-content: space-between;
-
-                .btn-next,
-                .btn-back {
-                    border: none;
-                    background-color: $secondary;
-                    color: white;
-                }
-            }
-        }
-    }
-}
-
-#nationality-toggle:checked,
-#gender-toggle:checked,
-#DB-month-toggle:checked,
-#PI-month-toggle:checked,
-#expmonth-toggle:checked,
-#expyear-toggle:checked {
-    ~ label[for="nationality-toggle"],
-    ~ label[for="gender-toggle"],
-    ~ label[for="DB-month-toggle"],
-    ~ label[for="PI-month-toggle"],
-    ~ label[for="expmonth-toggle"],
-    ~ label[for="expyear-toggle"] {
-        .dropdown {
-            height: 70px;
-            padding-top: 10px;
-            padding-bottom: 15px;
-        }
-    }
-
-    ~ label[for="DB-month-toggle"],
-    ~ label[for="PI-month-toggle"] {
-        .dropdown {
-            height: 100px;
-        }
-    }
-}
-
-label[for="nationality-toggle"],
-label[for="gender-toggle"],
-label[for="DB-month-toggle"],
-label[for="PI-month-toggle"],
-label[for="expmonth-toggle"],
-label[for="expyear-toggle"] {
-    position: relative;
-    display: grid;
-    right: 8px;
-}
-
-label[for="gender-toggle"] {
-    right: 4px;
-
-    .dropdown {
-        width: 121.8%;
-    }
-}
-
-label[for="DB-month-toggle"],
-label[for="PI-month-toggle"] {
-    right: 6px;
-
-    .dropdown {
-        width: 123.1%;
-    }
-}
-
-label[for="expmonth-toggle"],
-label[for="expyear-toggle"] {
-    .dropdown {
-        width: 107.7%;
-    }
 }
