--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,7 +1,29 @@
-.grid-default, .container-sign,
-.container-signup, .container-sign .sign-block-1 form, .container-signup .sign-block-2, .container-signup .sign-block-2 form, .container-modal .modal-body, .container-modal .modal-body .modal-content, .container-modal .modal-body .modal-content .container-steps, .container-modal .modal-body .modal-content .container-steps .circle-1,
+.grid-default,
+.main-body,
+footer,
+.container-profile .profile-body .profile-details,
+.container-profile .profile-body,
+.container-profile .profile-nav,
+.container-profile .profile-header,
+.container-profile,
+.container-store .container-store-item .store-item-book,
+.container-store .container-store-item .store-item-column,
+.container-store .container-store-item,
+.container-store,
+.container-modal .modal-body .modal-content .container-btn,
+.container-modal .modal-body .modal-content form .container-container .container-input .validation,
+.container-modal .modal-body .modal-content form .container-container,
+.container-modal .modal-body .modal-content .container-steps .circle-1,
 .container-modal .modal-body .modal-content .container-steps .circle-2,
-.container-modal .modal-body .modal-content .container-steps .circle-3, .container-modal .modal-body .modal-content form .container-container, .container-modal .modal-body .modal-content form .container-container .container-input .validation, .container-modal .modal-body .modal-content .container-btn, .container-store, .container-store .container-store-item, .container-store .container-store-item .store-item-column, .container-store .container-store-item .store-item-book, .container-profile, .container-profile .profile-header, .container-profile .profile-nav, .container-profile .profile-body, .container-profile .profile-body .profile-details, footer, .main-body {
+.container-modal .modal-body .modal-content .container-steps .circle-3,
+.container-modal .modal-body .modal-content .container-steps,
+.container-modal .modal-body .modal-content,
+.container-modal .modal-body,
+.container-signup .sign-block-2 form,
+.container-signup .sign-block-2,
+.container-sign .sign-block-1 form,
+.container-sign,
+.container-signup {
   display: grid;
   justify-items: center;
 }
@@ -20,7 +42,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   border-radius: 50px;
   border: none;
@@ -49,6 +75,14 @@
   box-shadow: 0 0px 1.5px -4px rgba(0, 0, 0, 0.12), 0 0px 12px -4px rgba(0, 0, 0, 0.24);
 }
 
+.input::-moz-placeholder {
+  color: #b4b4b4;
+}
+
+.input:-ms-input-placeholder {
+  color: #b4b4b4;
+}
+
 .input::placeholder {
   color: #b4b4b4;
 }
@@ -73,7 +107,8 @@
   top: 34px;
   background-color: white;
   box-shadow: 0 0px 1.5px -4px rgba(0, 0, 0, 0.12), 0 0px 12px -4px rgba(0, 0, 0, 0.24);
-  clip-path: inset(0 -5px -5px -5px);
+  -webkit-clip-path: inset(0 -5px -5px -5px);
+          clip-path: inset(0 -5px -5px -5px);
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
   z-index: 10;
@@ -128,7 +163,12 @@
   font-size: 0.8rem;
 }
 
-.sm-icon, .icon-person-add, .icon-person, .icon-facebook, .icon-google, .icon-search {
+.sm-icon,
+.icon-search,
+.icon-google,
+.icon-facebook,
+.icon-person,
+.icon-person-add {
   width: 25px;
   height: 25px;
 }
@@ -222,6 +262,8 @@ nav .nav-links {
 nav .nav-links a:not(.btn) {
   margin-right: 20px;
   font-size: 1rem;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
 }
 
@@ -258,6 +300,7 @@ nav .icon-menu .line {
   nav .logo {
     width: 70%;
   }
+
   nav .nav-links {
     display: grid;
     grid-template-rows: repeat(auto-fill, 1fr);
@@ -272,36 +315,44 @@ nav .icon-menu .line {
     height: 0%;
     overflow: hidden;
   }
+
   nav .nav-links a:not(.btn) {
     color: white;
     font-size: 3rem;
     width: 100%;
     margin: 0;
   }
+
   nav .nav-links .btn-login,
   nav .nav-links .btn-logout {
     box-shadow: 0 0 0 1.5px white;
     color: white;
     font-weight: 100;
   }
+
   nav .nav-links .btn-login .icon-person,
   nav .nav-links .btn-logout .icon-person {
     background-image: url('data:image/svg+xml;utf8,<svg width="54px" height="54px" viewBox="0 0 54 54" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path fill="white" stroke="transparent" stroke-width="0" style="" d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/></svg>');
   }
+
   nav .icon-menu {
     display: block;
   }
+
   nav #nav-toggle:checked ~ .icon-menu :first-child {
     position: fixed;
     transform: rotate(45deg);
   }
+
   nav #nav-toggle:checked ~ .icon-menu :nth-child(2) {
     display: none;
     transition: display 0.5s linear;
   }
+
   nav #nav-toggle:checked ~ .icon-menu :last-child {
     transform: rotate(-45deg);
   }
+
   nav #nav-toggle:checked ~ .nav-links {
     height: 88%;
   }
@@ -426,6 +477,8 @@ nav .icon-menu .line {
 }
 
 .container-signup {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   margin-top: 2%;
 }
@@ -525,6 +578,8 @@ nav .icon-menu .line {
 .container-reset {
   margin-top: 12%;
   width: 30%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   box-shadow: 0 0px 1.9px rgba(0, 0, 0, 0.085), 0 0px 15px rgba(0, 0, 0, 0.17);
   padding: 20px;
@@ -560,6 +615,8 @@ nav .icon-menu .line {
 
 .container-reset form section input {
   height: 26px;
+  width: -webkit-max-content;
+  width: -moz-max-content;
   width: max-content;
   font-size: 1rem;
 }
@@ -683,6 +740,14 @@ nav .icon-menu .line {
   height: 30px;
 }
 
+.container-modal .modal-body .modal-content form .container-container .container-input .input::-moz-placeholder {
+  color: #c7c7c7;
+}
+
+.container-modal .modal-body .modal-content form .container-container .container-input .input:-ms-input-placeholder {
+  color: #c7c7c7;
+}
+
 .container-modal .modal-body .modal-content form .container-container .container-input .input::placeholder {
   color: #c7c7c7;
 }
@@ -703,7 +768,8 @@ nav .icon-menu .line {
 
 .container-modal .modal-body .modal-content form .container-container .container-input .card-info {
   grid-template-columns: 50% 50%;
-  column-gap: 10px;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
 }
 
 .container-modal .modal-body .modal-content form .container-container .container-input .card-info .input {
@@ -716,7 +782,8 @@ nav .icon-menu .line {
   grid-template-columns: 0.19fr 0.5fr 0.21fr;
   width: 100%;
   align-items: center;
-  column-gap: 20px;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
 }
 
 .container-modal .modal-body .modal-content form .container-container .container-input .container-date-DB .input-day-DB,
@@ -732,7 +799,8 @@ nav .icon-menu .line {
 .container-modal .modal-body .modal-content form .container-container .container-input .container-date-PI .input-month-DB,
 .container-modal .modal-body .modal-content form .container-container .container-input .container-date-PI .input-month-PI {
   border-radius: 0px;
-  clip-path: inset(-5px 0 -5px 0);
+  -webkit-clip-path: inset(-5px 0 -5px 0);
+          clip-path: inset(-5px 0 -5px 0);
   width: 100%;
   height: 32px;
 }
@@ -746,12 +814,18 @@ nav .icon-menu .line {
 }
 
 .container-modal .modal-body .modal-content form .container-container .cards {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
 }
 
 .container-modal .modal-body .modal-content form .container-container .cards a {
   cursor: pointer;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
 }
 
@@ -892,97 +966,97 @@ nav .icon-menu .line {
   }
 }
 
-#nationality-toggle:checked ~ label[for="nationality-toggle"] .dropdown,
-#nationality-toggle:checked ~ label[for="gender-toggle"] .dropdown,
-#nationality-toggle:checked ~ label[for="DB-month-toggle"] .dropdown,
-#nationality-toggle:checked ~ label[for="PI-month-toggle"] .dropdown,
-#nationality-toggle:checked ~ label[for="expmonth-toggle"] .dropdown,
-#nationality-toggle:checked ~ label[for="expyear-toggle"] .dropdown,
-#gender-toggle:checked ~ label[for="nationality-toggle"] .dropdown,
-#gender-toggle:checked ~ label[for="gender-toggle"] .dropdown,
-#gender-toggle:checked ~ label[for="DB-month-toggle"] .dropdown,
-#gender-toggle:checked ~ label[for="PI-month-toggle"] .dropdown,
-#gender-toggle:checked ~ label[for="expmonth-toggle"] .dropdown,
-#gender-toggle:checked ~ label[for="expyear-toggle"] .dropdown,
-#DB-month-toggle:checked ~ label[for="nationality-toggle"] .dropdown,
-#DB-month-toggle:checked ~ label[for="gender-toggle"] .dropdown,
-#DB-month-toggle:checked ~ label[for="DB-month-toggle"] .dropdown,
-#DB-month-toggle:checked ~ label[for="PI-month-toggle"] .dropdown,
-#DB-month-toggle:checked ~ label[for="expmonth-toggle"] .dropdown,
-#DB-month-toggle:checked ~ label[for="expyear-toggle"] .dropdown,
-#PI-month-toggle:checked ~ label[for="nationality-toggle"] .dropdown,
-#PI-month-toggle:checked ~ label[for="gender-toggle"] .dropdown,
-#PI-month-toggle:checked ~ label[for="DB-month-toggle"] .dropdown,
-#PI-month-toggle:checked ~ label[for="PI-month-toggle"] .dropdown,
-#PI-month-toggle:checked ~ label[for="expmonth-toggle"] .dropdown,
-#PI-month-toggle:checked ~ label[for="expyear-toggle"] .dropdown,
-#expmonth-toggle:checked ~ label[for="nationality-toggle"] .dropdown,
-#expmonth-toggle:checked ~ label[for="gender-toggle"] .dropdown,
-#expmonth-toggle:checked ~ label[for="DB-month-toggle"] .dropdown,
-#expmonth-toggle:checked ~ label[for="PI-month-toggle"] .dropdown,
-#expmonth-toggle:checked ~ label[for="expmonth-toggle"] .dropdown,
-#expmonth-toggle:checked ~ label[for="expyear-toggle"] .dropdown,
-#expyear-toggle:checked ~ label[for="nationality-toggle"] .dropdown,
-#expyear-toggle:checked ~ label[for="gender-toggle"] .dropdown,
-#expyear-toggle:checked ~ label[for="DB-month-toggle"] .dropdown,
-#expyear-toggle:checked ~ label[for="PI-month-toggle"] .dropdown,
-#expyear-toggle:checked ~ label[for="expmonth-toggle"] .dropdown,
-#expyear-toggle:checked ~ label[for="expyear-toggle"] .dropdown {
+#nationality-toggle:checked ~ label[for=nationality-toggle] .dropdown,
+#nationality-toggle:checked ~ label[for=gender-toggle] .dropdown,
+#nationality-toggle:checked ~ label[for=DB-month-toggle] .dropdown,
+#nationality-toggle:checked ~ label[for=PI-month-toggle] .dropdown,
+#nationality-toggle:checked ~ label[for=expmonth-toggle] .dropdown,
+#nationality-toggle:checked ~ label[for=expyear-toggle] .dropdown,
+#gender-toggle:checked ~ label[for=nationality-toggle] .dropdown,
+#gender-toggle:checked ~ label[for=gender-toggle] .dropdown,
+#gender-toggle:checked ~ label[for=DB-month-toggle] .dropdown,
+#gender-toggle:checked ~ label[for=PI-month-toggle] .dropdown,
+#gender-toggle:checked ~ label[for=expmonth-toggle] .dropdown,
+#gender-toggle:checked ~ label[for=expyear-toggle] .dropdown,
+#DB-month-toggle:checked ~ label[for=nationality-toggle] .dropdown,
+#DB-month-toggle:checked ~ label[for=gender-toggle] .dropdown,
+#DB-month-toggle:checked ~ label[for=DB-month-toggle] .dropdown,
+#DB-month-toggle:checked ~ label[for=PI-month-toggle] .dropdown,
+#DB-month-toggle:checked ~ label[for=expmonth-toggle] .dropdown,
+#DB-month-toggle:checked ~ label[for=expyear-toggle] .dropdown,
+#PI-month-toggle:checked ~ label[for=nationality-toggle] .dropdown,
+#PI-month-toggle:checked ~ label[for=gender-toggle] .dropdown,
+#PI-month-toggle:checked ~ label[for=DB-month-toggle] .dropdown,
+#PI-month-toggle:checked ~ label[for=PI-month-toggle] .dropdown,
+#PI-month-toggle:checked ~ label[for=expmonth-toggle] .dropdown,
+#PI-month-toggle:checked ~ label[for=expyear-toggle] .dropdown,
+#expmonth-toggle:checked ~ label[for=nationality-toggle] .dropdown,
+#expmonth-toggle:checked ~ label[for=gender-toggle] .dropdown,
+#expmonth-toggle:checked ~ label[for=DB-month-toggle] .dropdown,
+#expmonth-toggle:checked ~ label[for=PI-month-toggle] .dropdown,
+#expmonth-toggle:checked ~ label[for=expmonth-toggle] .dropdown,
+#expmonth-toggle:checked ~ label[for=expyear-toggle] .dropdown,
+#expyear-toggle:checked ~ label[for=nationality-toggle] .dropdown,
+#expyear-toggle:checked ~ label[for=gender-toggle] .dropdown,
+#expyear-toggle:checked ~ label[for=DB-month-toggle] .dropdown,
+#expyear-toggle:checked ~ label[for=PI-month-toggle] .dropdown,
+#expyear-toggle:checked ~ label[for=expmonth-toggle] .dropdown,
+#expyear-toggle:checked ~ label[for=expyear-toggle] .dropdown {
   height: 70px;
   padding-top: 10px;
   padding-bottom: 15px;
 }
 
-#nationality-toggle:checked ~ label[for="DB-month-toggle"] .dropdown,
-#nationality-toggle:checked ~ label[for="PI-month-toggle"] .dropdown,
-#gender-toggle:checked ~ label[for="DB-month-toggle"] .dropdown,
-#gender-toggle:checked ~ label[for="PI-month-toggle"] .dropdown,
-#DB-month-toggle:checked ~ label[for="DB-month-toggle"] .dropdown,
-#DB-month-toggle:checked ~ label[for="PI-month-toggle"] .dropdown,
-#PI-month-toggle:checked ~ label[for="DB-month-toggle"] .dropdown,
-#PI-month-toggle:checked ~ label[for="PI-month-toggle"] .dropdown,
-#expmonth-toggle:checked ~ label[for="DB-month-toggle"] .dropdown,
-#expmonth-toggle:checked ~ label[for="PI-month-toggle"] .dropdown,
-#expyear-toggle:checked ~ label[for="DB-month-toggle"] .dropdown,
-#expyear-toggle:checked ~ label[for="PI-month-toggle"] .dropdown {
+#nationality-toggle:checked ~ label[for=DB-month-toggle] .dropdown,
+#nationality-toggle:checked ~ label[for=PI-month-toggle] .dropdown,
+#gender-toggle:checked ~ label[for=DB-month-toggle] .dropdown,
+#gender-toggle:checked ~ label[for=PI-month-toggle] .dropdown,
+#DB-month-toggle:checked ~ label[for=DB-month-toggle] .dropdown,
+#DB-month-toggle:checked ~ label[for=PI-month-toggle] .dropdown,
+#PI-month-toggle:checked ~ label[for=DB-month-toggle] .dropdown,
+#PI-month-toggle:checked ~ label[for=PI-month-toggle] .dropdown,
+#expmonth-toggle:checked ~ label[for=DB-month-toggle] .dropdown,
+#expmonth-toggle:checked ~ label[for=PI-month-toggle] .dropdown,
+#expyear-toggle:checked ~ label[for=DB-month-toggle] .dropdown,
+#expyear-toggle:checked ~ label[for=PI-month-toggle] .dropdown {
   height: 100px;
 }
 
-label[for="nationality-toggle"],
-label[for="gender-toggle"],
-label[for="DB-month-toggle"],
-label[for="PI-month-toggle"],
-label[for="expmonth-toggle"],
-label[for="expyear-toggle"] {
+label[for=nationality-toggle],
+label[for=gender-toggle],
+label[for=DB-month-toggle],
+label[for=PI-month-toggle],
+label[for=expmonth-toggle],
+label[for=expyear-toggle] {
   position: relative;
   display: grid;
   right: 8px;
 }
 
-label[for="nationality-toggle"] .dropdown {
+label[for=nationality-toggle] .dropdown {
   width: 93%;
 }
 
-label[for="gender-toggle"] {
+label[for=gender-toggle] {
   right: 4px;
 }
 
-label[for="gender-toggle"] .dropdown {
+label[for=gender-toggle] .dropdown {
   width: 110%;
 }
 
-label[for="DB-month-toggle"],
-label[for="PI-month-toggle"] {
+label[for=DB-month-toggle],
+label[for=PI-month-toggle] {
   right: 6px;
 }
 
-label[for="DB-month-toggle"] .dropdown,
-label[for="PI-month-toggle"] .dropdown {
+label[for=DB-month-toggle] .dropdown,
+label[for=PI-month-toggle] .dropdown {
   width: 123%;
 }
 
-label[for="expmonth-toggle"] .dropdown,
-label[for="expyear-toggle"] .dropdown {
+label[for=expmonth-toggle] .dropdown,
+label[for=expyear-toggle] .dropdown {
   width: 103%;
 }
 
@@ -1014,7 +1088,8 @@ label[for="expyear-toggle"] .dropdown {
 
 .container-profile .profile-nav {
   grid-template-columns: 0.5fr 0.5fr;
-  column-gap: 10px;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
 }
 
 .container-profile .profile-nav .btn {
@@ -1047,7 +1122,8 @@ label[for="expyear-toggle"] .dropdown {
   width: 65%;
   margin-top: 40px;
   row-gap: 30px;
-  column-gap: 70px;
+  -moz-column-gap: 70px;
+       column-gap: 70px;
   grid-template-columns: 1fr 1fr;
 }
 
@@ -1115,6 +1191,7 @@ label[for="expyear-toggle"] .dropdown {
   color: white;
   font-size: 0.8rem;
   font-weight: normal;
+  position: -webkit-sticky;
   position: sticky;
 }
 
@@ -1130,7 +1207,8 @@ label[for="expyear-toggle"] .dropdown {
   border-top: 1px solid #c7c7c7;
 }
 
-.container-profile .profile-body .profile-purchases table tr:first-of-type, .container-profile .profile-body .profile-purchases table tr:nth-of-type(2) {
+.container-profile .profile-body .profile-purchases table tr:first-of-type,
+.container-profile .profile-body .profile-purchases table tr:nth-of-type(2) {
   border: none;
 }
 
@@ -1142,6 +1220,8 @@ label[for="expyear-toggle"] .dropdown {
 
 footer {
   width: 100%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   margin-top: 100px;
   background-color: white;
@@ -1161,6 +1241,8 @@ footer img {
 
 footer div:nth-child(2) a,
 footer div:nth-child(3) a {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   margin-bottom: 12px;
   display: grid;
@@ -1223,21 +1305,25 @@ footer div:last-child {
     grid-template-columns: 1fr;
     grid-template-rows: 0.7fr 0.2fr 0.5fr 0.5fr 0.4fr;
   }
+
   footer div:nth-child(2) a,
   footer div:nth-child(3) a {
     width: 100%;
     text-align: center;
   }
+
   footer div:nth-child(4) {
     justify-items: center;
     text-align: justify;
     grid-template-columns: none;
     margin: 25px 20% 25px 20%;
   }
+
   footer div:nth-child(4) form {
     justify-items: center;
     width: 70%;
   }
+
   footer div:last-child {
     grid-column: span 1;
     margin-top: 4px;
@@ -1264,6 +1350,8 @@ a {
 
 body {
   width: 100%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   margin: 0;
   font-family: "Montserrat", sans-serif;
@@ -1285,4 +1373,4 @@ body {
   background-color: rgba(0, 0, 0, 0.534);
   display: none;
 }
-/*# sourceMappingURL=app.css.map */
+
