--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -56,7 +56,8 @@ body {
     height: 100%;
     width: 100%;
 
-    @extend .grid-default;
+    display: grid;
+    place-items: center;
 }
 
 .container-bg {
