--- a/resources/assets/sass/layout/_auth.scss
+++ b/resources/assets/sass/layout/_auth.scss
@@ -8,8 +8,8 @@
     border: none;
     box-shadow: 0 0px 1.9px rgba(0, 0, 0, 0.085), 0 0px 15px rgba(0, 0, 0, 0.17);
 
-    @extend .grid-default;
-    align-items: center;
+    display: grid;
+    place-items: center;
     grid-template-columns: 1fr 1fr;
 
     @media only screen and (max-width: $mobile) {
@@ -20,9 +20,10 @@
 .container-sign {
     .sign-block-1 {
         height: 100%;
+        width: 100%;
 
         display: grid;
-        align-content: center;
+        place-items: center;
 
         @media only screen and (max-width: $mobile) {
             grid-column: span 2;
@@ -35,11 +36,8 @@
         form {
             @extend .grid-default;
 
-            input {
-                font-family: "Montserrat", sans-serif;
-            }
-
-            p {
+            div {
+                margin-top: 25px;
                 width: 100%;
             }
 
@@ -64,6 +62,7 @@
             #forgot-pass {
                 font-size: 0.8rem;
                 text-align: center;
+                margin-bottom: 20px;
 
                 & > a {
                     color: gray;
@@ -178,7 +177,7 @@
 
 .container-signup {
     height: fit-content;
-    margin-top: 2%;
+    margin-top: 8%;
 
     .sign-block-1 {
         @media only screen and (max-width: $mobile) {
@@ -221,9 +220,7 @@
     .sign-block-2 {
         height: 100%;
         padding: 20px 0px 20px 0px;
-
-        @extend .grid-default;
-        align-content: center;
+        width: 100%;
 
         #logo {
             margin-bottom: 30px;
@@ -235,36 +232,33 @@
         }
 
         form {
-            @extend .grid-default;
+            display: grid;
+            place-items: center;
+            height: 100%;
+            width: 100%;
 
             label {
-                margin-top: 30px;
+                margin-top: 20px;
+                display: inline-block;
                 padding-left: 17px;
                 color: gray;
                 font-size: 0.8rem;
             }
 
-            p {
-                width: 100%;
-            }
-
-            input {
-                font-family: "Montserrat", sans-serif;
-                font-size: 0.8rem;
-            }
-
-            #username {
+            div {
                 margin-top: 10px;
-                height: 30px;
-                width: 85%;
+                width: 100%;
+
+                input {
+                    width: 250px;
+                }
             }
 
+            #username,
             #email,
             #password,
             #password_confirmation {
-                margin-top: 10px;
                 height: 30px;
-                width: 85%;
             }
 
             .btn-form-signup {
