Temp reset styles

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -12,7 +12,7 @@ $desktop: 1200px;
     justify-items: center;
 }
 
-//@import "base/reset";
+@import "base/reset";
 @import "components/buttons";
 @import "functions";
 @import "components/icons";
