--- a/public/css/app.css
+++ b/public/css/app.css
@@ -221,6 +221,10 @@ footer,
 }
 
 nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30%;
   width: 100%;
   height: 12%;
   z-index: 1;
@@ -228,18 +232,9 @@ nav {
   background: white;
 }
 
-nav,
-nav .nav-links {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 nav .logo {
   display: flex;
   align-items: center;
-  width: 35%;
-  height: 100%;
   font-size: 2.1rem;
   outline: none;
 }
@@ -249,8 +244,9 @@ nav .logo img {
 }
 
 nav .nav-links {
-  margin: 0;
-  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   transition: 0.6s ease-out;
 }
 
@@ -277,8 +273,6 @@ nav .nav-links a:not(.btn):hover::after {
 
 nav .icon-menu {
   display: none;
-  position: absolute;
-  right: 21%;
   cursor: pointer;
 }
 
@@ -292,8 +286,8 @@ nav .icon-menu .line {
 }
 
 @media only screen and (max-width: 768px) {
-  nav .logo {
-    width: 70%;
+  nav {
+    gap: 30%;
   }
 
   nav .nav-links {
