--- a/resources/assets/sass/components/_navigation.scss
+++ b/resources/assets/sass/components/_navigation.scss
@@ -1,10 +1,8 @@
 nav {
-    &,
-    .nav-links {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30%;
 
     width: 100%;
     height: 12%;
@@ -15,8 +13,6 @@ nav {
     .logo {
         display: flex;
         align-items: center;
-        width: 35%;
-        height: 100%;
         font-size: 2.1rem;
         outline: none;
 
@@ -26,8 +22,10 @@ nav {
     }
 
     .nav-links {
-        margin: 0;
-        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
         transition: 0.6s ease-out;
 
         a:not(.btn) {
@@ -52,8 +50,6 @@ nav {
 
     .icon-menu {
         display: none;
-        position: absolute;
-        right: 21%;
         cursor: pointer;
 
         .line {
@@ -67,9 +63,7 @@ nav {
     }
 
     @media only screen and (max-width: 768px) {
-        .logo {
-            width: 70%;
-        }
+        gap: 30%;
 
         .nav-links {
             display: grid;
