--- a/resources/assets/sass/components/_icons.scss
+++ b/resources/assets/sass/components/_icons.scss
@@ -32,7 +32,11 @@
         expand:
             '<path fill="#{$color}" stroke="#{$stroke-color}" stroke-width="#{$stroke-width}" style="#{$css}" d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/>',
         edit:
-            '<path fill="#{$color}" stroke="#{$stroke-color}" stroke-width="#{$stroke-width}" style="#{$css}" d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/>'
+            '<path fill="#{$color}" stroke="#{$stroke-color}" stroke-width="#{$stroke-width}" style="#{$css}" d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/>',
+        phone:
+            '<path fill="#{$color}" stroke="#{$stroke-color}" stroke-width="#{$stroke-width}" style="#{$css}" d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/>',
+        email:
+            '<path fill="#{$color}" stroke="#{$stroke-color}" stroke-width="#{$stroke-width}" style="#{$css}" d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>'
     );
 
     $icon: _buildIcon(
@@ -119,13 +123,13 @@
     background-image: icon(expand, rgb(0, 0, 0), 24px, 24px, 0, 0, 24, 24);
 }
 
-.icon-edit {
-    width: 16px;
-    height: 16px;
-    background-size: 100% 100%;
+.icon-expand-white {
+    width: 24px;
+    height: 24px;
+    background-size: 24px 24px;
     background-image: icon(
-        edit,
-        str-replace(#{$disabled}, "#", "%23"),
+        expand,
+        rgb(255, 255, 255),
         24px,
         24px,
         0,
@@ -133,5 +137,34 @@
         24,
         24
     );
+}
+
+.icon-edit {
+    width: 16px;
+    height: 16px;
+    background-image: icon(
+        edit,
+        str-replace(#{$disabled}, "#", "%23"),
+        24px,
+        24px,
+        0,
+        0,
+        16,
+        16
+    );
+    cursor: pointer;
+}
+
+.icon-phone {
+    width: 24px;
+    height: 24px;
+    background-image: icon(phone, white, 48px, 48px, 0, 0, 48, 48);
+    cursor: pointer;
+}
+
+.icon-email {
+    width: 24px;
+    height: 24px;
+    background-image: icon(email, white, 48px, 48px, 0, 0, 48, 48);
     cursor: pointer;
 }
