--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -21,6 +21,8 @@ $desktop: 1200px;
 @import "components/modals";
 @import "layout/store";
 @import "layout/profile";
+@import "layout/aboutus";
+@import "layout/contactus";
 @import "layout/footer";
 
 *:focus {
@@ -69,4 +71,99 @@ body {
     display: none;
 }
 
-/* hello*/
+.container-hom-row-1,
+.container-hom-row-2 {
+    display: grid;
+    place-items: center;
+}
+
+.container-hom-row-1 {
+    grid-template-columns: 1fr 1fr;
+    width: 70%;
+    color: white;
+
+    @media only screen and (max-width: $mobile) {
+        grid-template-columns: 1fr;
+    }
+
+    .con-1-col-home-1 {
+        display: grid;
+
+        .sub-text {
+            display: grid;
+            grid-template-columns: 20% 35% 45%;
+            font-size: 1.45rem;
+            font-weight: 300;
+            place-items: center;
+        }
+
+        .main-text {
+            font-size: 3.8rem;
+            font-weight: bold;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        .btn-gs {
+            font-size: 1.2rem;
+            @media only screen and (max-width: $mobile) {
+                justify-self: center;
+            }
+        }
+    }
+
+    .con-1-col-home-2 {
+        display: grid;
+        place-items: end;
+
+        @media only screen and (max-width: $mobile) {
+            display: none;
+        }
+
+        img {
+            width: 90%;
+        }
+    }
+}
+
+.container-hom-row-2 {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    width: 60%;
+
+    @media only screen and (max-width: $mobile) {
+        width: 80%;
+        place-items: center;
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-row-gap: 40px;
+
+        img {
+            &:nth-of-type(1) {
+                grid-column: 1 / span 2;
+            }
+
+            &:nth-of-type(2) {
+                grid-column: 3 / span 2;
+            }
+
+            &:nth-of-type(3) {
+                grid-column: 5 / span 2;
+            }
+
+            &:nth-of-type(4) {
+                grid-column: 2 / span 2;
+            }
+
+            &:nth-of-type(5) {
+                grid-column: 4 / span 2;
+            }
+        }
+    }
+
+    img {
+        width: 65%;
+    }
+}
+
+.home-learn-more {
+    padding-bottom: 50px;
+}
