--- a/resources/assets/sass/components/_buttons.scss
+++ b/resources/assets/sass/components/_buttons.scss
@@ -121,6 +121,17 @@
     font-weight: 700;
 }
 
+.btn-learn {
+    color: white;
+    background-color: rgba(255, 255, 255, 0.171);
+}
+
+.btn-gs {
+    color: white;
+    background-color: $primary;
+    margin: 0;
+}
+
 .border-red {
     border: 1px solid red;
 }
